--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -20,5 +20,13 @@
     }
   },
   "exclude": ["node_modules", "dist", "target", "./*/target"],
-  "include": ["./deployments/**/*.json", "./deployments/**/*.ts", "./scripts/**/*.ts"]
+  "include": [
+    "./deployments/**/*.json",
+    "./deployments/**/*.ts",
+    "./scripts/**/*.ts",
+    "scripts/deploy.js",
+    "scripts/utils/writeContractAddresses.js",
+    "scripts/utils/initPolkadotJs.js",
+    "scripts/utils/getDeploymentData.js"
+  ]
 }
