--- a/contracts/src/betting/Cargo.toml
+++ b/contracts/src/betting/Cargo.toml
@@ -9,11 +9,12 @@ ink = { version = "4.3.0", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
+chrono = { version = "0.4", default-features = false, features = ["serde"] }
 
 [lib]
 path = "lib.rs"
 
 [features]
 default = ["std"]
-std = ["ink/std", "scale/std", "scale-info/std"]
+std = ["ink/std", "scale/std", "scale-info/std", "chrono/std"]
 ink-as-dependency = []
